# civitai-mcp-ultimate

./: .gitignore  HANDOFF.md  NEXT_SESSION_PROMPT.md  README.md  SKILL.md  TRAIL-SPEC.md  pyproject.toml  smithery.yaml
docs/: civitai-api-reference.md
src/civitai_mcp_ultimate/: __init__.py  client.py  formatters.py  history.py  i18n.py  image_cache.py  meilisearch.py  server.py  types.py
src/civitai_mcp_ultimate/tools/: __init__.py  creators.py  downloads.py  images.py  models.py
tests/: conftest.py
